--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,6 +27,6 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
-        platforms: linux/amd64
+        platforms: linux/amd64,linux/arm64
         tags: |
-            ghcr.io/${{ github.repository_owner }}/ffmpeg:6.1-cuda
+            ghcr.io/${{ github.repository_owner }}/ffmpeg:6.1-alpine
